--- a/deploy.yml
+++ b/deploy.yml
@@ -1,13 +1,28 @@
 ---
-- name: Creating folders and moving source code to IIS
+- name: .NET CORE APPLICATION IIS SERVER DEPLOYMENT
   hosts: "{{ lookup('env','IIS_SERVER') }}"
   gather_facts: no
   tasks:
-    
+
     - name: Creating website folder on IIS
       ansible.windows.win_file:
         path: "{{ lookup('env','WEB_PATH') }}"
         state: directory
+
+    - name: Create a new application pool in 'Started' state
+      community.windows.win_iis_webapppool:
+        name: "{{ lookup('env','POOL_NAME') }}"
+        state: started
+
+    - name: Crate IIS site and stop for update
+      community.windows.win_iis_website:
+        name: "{{ lookup('env','WEB_NAME') }}"
+        state: stopped
+        port: "{{ lookup('env','WEB_PORT') }}"
+        ip: "{{ lookup('env','WEB_IP') }}"
+        hostname: "{{ lookup('env','WEB_HOSTNAME') }}"
+        application_pool: "{{ lookup('env','POOL_NAME') }}"
+        physical_path: "{{ lookup('env','WEB_PATH') }}"
 
     - name: Pull the repo to local IIS
       win_git:
@@ -18,7 +33,6 @@
         recursive: yes
         replace_dest: no
         accept_hostkey: yes
-
 
     - name: Place Publish Profile for IIS deployment
       win_template:
@@ -34,28 +48,15 @@
       ansible.windows.win_command: msbuild  /p:DeployOnBuild=true /p:PublishProfile={{ lookup('env','SRC_APP_PATH') }}\\iisdeploy.pubxml
       args:
         chdir: "{{ lookup('env','SRC_APP_PATH') }}"
-   
-   
 
-- name: Creating Webpool Site Api
-  hosts: "{{ lookup('env','IIS_SERVER') }}"
-  gather_facts: no
-  tasks:
-
-    - name: Create a new application pool in 'Started' state
-      community.windows.win_iis_webapppool:
-        name: "{{ lookup('env','POOL_NAME') }}"
-        state: started
-
-    - name: Crate IIS site
+    - name: Start IIS site
       community.windows.win_iis_website:
         name: "{{ lookup('env','WEB_NAME') }}"
         state: started
-        port: "{{ lookup('env','WEB_PORT') }}"
-        ip: "{{ lookup('env','WEB_IP') }}"
-        hostname: "{{ lookup('env','WEB_HOSTNAME') }}"
-        application_pool: "{{ lookup('env','POOL_NAME') }}"
-        physical_path: "{{ lookup('env','WEB_PATH') }}"
-        parameters: logfile.directory:{{ lookup('env','WEB_LOG_PATH') }}
       register: website
+
+    - name: IIS Pool Info
+      debug:
+        var: website
+
 ...
